--- a/ecom/package.json
+++ b/ecom/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.5",
@@ -19,6 +20,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
